Moves mining to its own class and adds transaction reward.
