# lib/server/index.js
@@ -5,7 +5,7 @@ const swaggerDocument = require('./swagger.json');
 const Block = require('../blockchain/block');
 
 class HttpServer {
-    constructor(port, node, blockchain, operator) {
+    constructor(port, node, blockchain, operator, miner) {
         const app = express();
 
         app.use(bodyParser.json());
@@ -23,13 +23,6 @@ class HttpServer {
         app.post('/blockchain/blocks/latest', (req, res) => {
             node.checkReceivedBlock(Block.fromJson(req.body));
             res.send();
-        });
-
-        app.post('/blockchain/blocks/mine', (req, res) => {
-            const newBlock = blockchain.mine(req.body.data);
-            console.log(`Block added: ${JSON.stringify(newBlock)}`);
-            node.broadcast(node.sendLatestBlock, newBlock);
-            res.send(newBlock);
         });
 
         app.get('/blockchain/blocks/:hash([a-zA-Z0-9]{64})', (req, res) => {
@@ -84,6 +77,13 @@ class HttpServer {
         app.post('/node/peers/new', (req, res) => {
             node.connectToPeer(req.body);
             res.send();
+        });
+
+        app.post('/miner/mine', (req, res) => {
+            const newBlock = miner.mine(req.body.minerAddress);
+            console.log(`Block added: ${JSON.stringify(newBlock)}`);
+            node.broadcast(node.sendLatestBlock, newBlock);
+            res.send(newBlock);
         });
 
         app.listen(port, () => {
